--- a/lang/en-Us.json
+++ b/lang/en-Us.json
@@ -7,5 +7,8 @@
     "title":"title",
     "author":"author",
     "body":"description",
-    "search":"search"
+    "search":"search",
+    "body_holder":"write what you want................",
+    "title_holder":" Your title ............",
+    "author_holder":"Author "
 }
