--- a/lang/ar-SA.json
+++ b/lang/ar-SA.json
@@ -10,5 +10,6 @@
     "body":"الموضوع",
    "body_holder":"بماذا تفكر ..........",
    "title_holder":"أختر عنوان مناسب............",
-   "author_holder":"كاتب الموضوع"
+   "author_holder":"كاتب الموضوع",
+   "more":"قراءة المزيد"
 }
