--- a/lang/en-Us.json
+++ b/lang/en-Us.json
@@ -10,5 +10,6 @@
     "search":"search",
     "body_holder":"write what you want................",
     "title_holder":" Your title ............",
-    "author_holder":"Author "
+    "author_holder":"Author ",
+    "more":"read more...................."
 }
